--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="C:/Users/DIANA JAVADALA/Downloads/OASIS/LEVEL-1 TASK-2/Portfolio.css">
+    <link rel="stylesheet" href="Portfolio.css">
 </head>
 
 <body style="background-color: #ffffff;">
@@ -33,7 +33,7 @@
 
        <section id="home">
             <p class="mainpage">
-                    <img src="C:/Users/DIANA JAVADALA/Downloads/OASIS/LEVEL-1 TASK-2/S.jpg" alt="mine" style="width: 470px; height: 470px; margin-right: 659px;border-radius: 30px; border: 5px solid  rgb(0, 0, 0);margin-top: 5px;box-shadow: 0 4px 8px 0 rgb(0, 0, 0);">
+                    <img src="S.jpg" alt="mine" style="width: 470px; height: 470px; margin-right: 659px;border-radius: 30px; border: 5px solid  rgb(0, 0, 0);margin-top: 5px;box-shadow: 0 4px 8px 0 rgb(0, 0, 0);">
                     <p class="text">Hello , Everyone!</p>
                     <p class="text1"> I'm Suchitra Ratna Diana Javadala</p>
                     <p class="text2">Web developer / Photographer /  Ui/Ux Designer</p>
@@ -80,7 +80,7 @@
                         </div>
                     </p>
                     <p>
-                        <input type="button1" class="button1" onclick="window.location.href='C:/Users/DIANA JAVADALA/Downloads/OASIS/LEVEL-1 TASK-2/RESUME.pdf';" value="Download Resume">
+                        <input type="button1" class="button1" onclick="window.location.href='RESUME.pdf';" value="Download Resume">
                     </p>                   
                 </div>
             </div>  
@@ -216,7 +216,7 @@
                 <div class="row">
                     <div class="column">
                         <div class="card">
-                            <img src="C:/Users/DIANA JAVADALA/Downloads/OASIS/LEVEL-1 TASK-2/INFOSYS.jpg" alt="Oasis Logo" style="width: 100%;">
+                            <img src="INFOSYS.jpg" alt="Oasis Logo" style="width: 100%;">
                         </div>
                     </div>
                    
